<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/first_num"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/second_num"
        android:textSize="30sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        android:layout_width="match_parent"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/plus" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        android:layout_width="match_parent"
        android:backgroundTint="@color/black"
        app:cornerRadius="16dp"
        android:layout_height="wrap_content"
        android:text="@string/minus" />

</LinearLayout>